
next
----
- added sounds:
	- bat
	- bear
	- camel
	- canary
	- cricket
	- giraffe_hum
	- gorilla_grunt
	- gorilla_roar
	- gorilla_snarl
	- monkey
	- parrot
	- parrot_chirp
	- parrot_whistle
	- peacock_02
	- penguin
	- pig_snort
	- pig_squeal
	- puppy_bark
	- toucan


v1.3
----
- pencil sounds split into "pencil_erase" & "pencil_write" groups
- fixed arithmetic operations on SoundGroup
- renamed node sound files
- SoundGroup:play returns handle or nil only
- using built-in type function on SoundGroup instance will return "SoundGroup"
- added sounds:
	- bee
	- bees
	- bumble_bee
	- chicken
	- clock_tick
	- coyote_howl
	- crow_caw
	- duck_quack
	- goat_bleat
	- grasshopper
	- hyena
	- jaguar_saw
	- lion
	- mouse
	- owl
	- peacock
	- piano
	- pigeon
	- tiger_roar
	- tiger_snarl
	- undead_moan
	- vulture
	- watch_tick
	- whistle
	- wolf
	- yak
	- zebra
	- zipper


v1.2
----
- added API object "SoundGroup" for creating & playing sound groups
- added sounds:
	- apple_bite
	- bird
	- bounce
	- cat_meow
	- coins
	- cow_moo
	- dog_bark
	- elephant
	- explosion
	- frog
	- fuse
	- gallop
	- horse_neigh
	- horse_snort
	- pencil
	- quail
	- rooster
	- sheep
	- skeleton_bones


v1.1
----
- added entity hit sound from default mod


v1.0
----
- initial release
- added node sounds from default mod
- added methods for setting node sounds