@@ -83,6 +83,7 @@ A [Minetest][] mod that provides a set of free sounds & methods. It is intended 
 | [tiger_snarl_01][tiger_roar_01]   | videog                       | CC BY 3.0    |                         |
 | [tiger_snarl_0[2-4]][tiger_snarl] | schots                       | CC0          |                         |
 | [toucan][]                        | Niels Krabbe                 | CC BY-SA 4.0 |                         |
+| [turkey_gobble][]                 | JarredGibb                   | CC0          |                         |
 | [undead_moan_*][undead_moan]      | AntumDeluge                  | CC0          |                         |
 | [vulture][]                       | AntumDeluge                  | CC0          | imitation               |
 | [watch_tick][]                    | Nicolas4677                  | CC0          |                         |
@@ -333,6 +334,7 @@ end
 [tiger_roar_01]: https://freesound.org/s/149190/
 [tiger_snarl]: https://freesound.org/s/439280/
 [toucan]: https://www.xeno-canto.org/250531
+[turkey_gobble]: https://freesound.org/s/233125/
 [undead_moan]: https://opengameart.org/node/81246
 [vulture]: https://opengameart.org/node/16329
 [watch_tick]: https://freesound.org/s/446611/
